# ZernikeMoments

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: autobuild.yaml
examples/: CMakeLists.txt  binvox_reader.cpp  binvox_reader.h  compute_descriptors.h  main.cpp  stdafx.h
lib/: Binomial.h  CMakeLists.txt  ScaledGeometricMoments.h  ScaledGeometricMoments.hpp  ScaledGeometricalMoments.cpp  ZernikeDescriptor.cpp  ZernikeDescriptor.h  ZernikeDescriptor.hpp  ZernikeMoments.cpp  ZernikeMoments.h  ZernikeMoments.hpp  ZernikeMoments.inl
main/: CMakeLists.txt  binvox_reader.hpp  binvox_utils.hpp  compute_descriptors.cpp  compute_descriptors.h  loggers.h  logsettings.ini  main.cpp  stdafx.cpp  stdafx.h  xmlmerger.cpp  xmlmerger.h  xmlreader.cpp  xmlreader.h  xmlwriter.hpp
main/include/: binvox_reader.hpp  compute_descriptors.h  compute_sha256.h  db.h  loggers.h  path_tree.h  path_tree.hpp  sqlite_row.hpp  stdafx.h  xmlmerger.h  xmlwriter.hpp
main/src/: compute_descriptors.cpp  compute_sha256.cpp  main.cpp  xmlmerger.cpp
